<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage.detailproduct.DetailProductItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageDetailItem"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:src="@drawable/tshirt_category"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/nameProductDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_product"
            style="@style/Typography.Heading.Bold"
            android:layout_marginTop="30dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_green_corner_15dp_allrounded"
            android:layout_gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                style="@style/Typography.Heading.White"/>

            <TextView
                android:id="@+id/quantityDetailProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:gravity="center"
                style="@style/Typography.Heading.White"
                android:layout_marginStart="5dp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>